--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -254,28 +254,41 @@
     </div>
     <div class="scroller-style main-container">
 
-        <div style="border: #bababa 2px solid;height: 442px;
-        width:310px;display: flex;flex-direction:column;justify-content: space-around  ;align-items: center;gap: 10px">
+        <div style="display: flex;flex-direction: row;gap: 20px; align-items: center;width: 750px;">
 
-            <div style="font-size: 40px;text-align: center;font-weight: bolder;">
-                {{'TEST NAME'}}
-            </div>
-            <div style="font-size: 20px;text-align: center;color: #bababa;max-width: 500px;">
-                {{'ORal New Chemical Entity Aiming to Slow Disease Trajectory in Early Parkinson’s'}}
-            </div>
-            <textarea name="comments" placeholder="comments" style="max-width: 450px;
+            <mat-icon (click)="moveleft()" style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
+                chevron_left</mat-icon>
+
+            <div class="tinder-box">
+
+                <div [ngClass]="(!bmxItem.componentText[testNameIndex].vote)?'':(bmxItem.componentText[testNameIndex].vote === 'negative')?'positive':'negative'"
+                    style="font-size: 80px;text-align: center;font-weight: bolder;animation: fadeInRight 1s ease-in 0 1 forwards;">
+                    {{( bmxItem.componentText[testNameIndex].nameCandidates)?
+                    bmxItem.componentText[testNameIndex].nameCandidates:'TEST NAME'}}
+                </div>
+                <div style="font-size: 24px;text-align: center;color: #bababa;max-width: 80%;">
+                    {{( bmxItem.componentText[testNameIndex].rationale)?
+                    bmxItem.componentText[testNameIndex].rationale:'Rationale of an undisclosed length'}}
+                </div>
+                <textarea name="comments" placeholder="comments" style="width: 100%;
                 padding: 20px;"></textarea>
-            <div style="display: flex;flex-direction:row;justify-content: center;align-items: center;gap: 110px;">
-                <button matRipple [matRippleCentered]="true" mat-icon-button style="outline: none;">
-                    <mat-icon style="font-size: 65px;color: brown;" class="full-icon">cancel</mat-icon>
-                </button>
-                <button matRipple [matRippleCentered]="true" mat-icon-button style="outline: none;">
-                    <mat-icon style="font-size: 65px;color: green;" class="full-icon">check</mat-icon>
-                </button>
+                <div style="display: flex;flex-direction:row;justify-content: center;align-items: center;gap: 110px;">
+
+                    <mat-icon (click)="voteName('negative')" style="font-size: 65px;color: #ee252f;cursor: pointer;"
+                        class="full-icon">highlight_off</mat-icon>
+                
+
+                    <mat-icon (click)="voteName('positive')" style="font-size: 65px;color: #00cd38;cursor: pointer;"
+                        class="full-icon">sentiment_satisfied_alt</mat-icon>
+                  
+                </div>
+
             </div>
+
+            <mat-icon (click)="moveRight()" style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
+                chevron_right</mat-icon>
 
         </div>
-
     </div>
 </div>
 
