--- a/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
+++ b/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
@@ -34,7 +34,7 @@
                                 <mat-label>Choose Template</mat-label>
                                 <mat-select class="selectLabels" [(ngModel)]="emailTemp" (selectionChange)="changeTemplate(emailTemp)">
                                     <mat-option *ngFor="let EMAIL_TEMPLATE of EMAIL_TEMPLATES" [value]="EMAIL_TEMPLATE">
-                                        {{EMAIL_TEMPLATE.name}}
+                                        {{EMAIL_TEMPLATE}}
                                     </mat-option>
                                 </mat-select>
                             </mat-form-field>
