--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -1,4 +1,4 @@
-<div class="page-design noselect">
+<div class="page-design noselect disable-dbl-tap-zoom">
     <div class="desktop">
         <button (click)="displayQrCode()" mat-icon-button matTooltip="design tools" matTooltipPosition="above"
             *ngIf="true"
