--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -29,7 +29,9 @@
             0 11px 15px -7px rgba(0, 0, 0, 0.2);
     }
 }
-
+.disable-dbl-tap-zoom {
+    touch-action: manipulation;
+  }
 .qr-code {
     position: absolute;
     top: 53%;
