--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,21 +1,21 @@
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview">
     <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above"
-        style=" margin: -50px 29px;" *ngIf="i === selectedIndex" mat-icon-button>
+        style=" margin: -50px 65px;" *ngIf="i === selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
     </button>
     <button (click)="selectedIndex = i" class="add-column" matTooltip="edit table content & settings"
-        matTooltipPosition="above" style=" margin: -50px 29px;" *ngIf="i !== selectedIndex" mat-icon-button>
+        matTooltipPosition="above" style=" margin: -50px 65px;" *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
     </button>
-    <button (click)="insertTextColumn()" class="add-column" style=" margin: -50px 65px;" matTooltip="add Text column"
+    <button (click)="insertTextColumn()" class="add-column" style=" margin: -50px 95px;" matTooltip="add Text column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
     </button>
-    <button (click)="insertRadioColumn()" class="add-column" style="margin: -50px 95px;" matTooltip="add radio column"
+    <!-- <button (click)="insertRadioColumn()" class="add-column" style="margin: -50px 95px;" matTooltip="add radio column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
-    </button>
+    </button> -->
     <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -50px 125px;"
         matTooltip="add a Comment box column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
